# fast_ado_pr_reviewer

./: Cargo.toml  README.md  config.template.toml
src/: ado_client.rs  config.rs  main.rs  models.rs
