[package]
name = "fast-pr-reviewer"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
base64 = "0.21"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
url = "2.4"
rand = "0.8.5"