[package]
name = "fast-pr-reviewer"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
base64 = "0.22.1"
log = "0.4"
env_logger = "0.11.8"
anyhow = "1.0"
url = "2.4"
rand = "0.9.1"
toml = "0.8.20"
dotenv = "0.15.0"
chrono = "0.4.40"
lazy_static = "1.4.0"
